cfn-template.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: >
  The Roman Numerals Converter Application aims to convert the given number to the Roman numerals. The application is to be coded in Python and deployed as a web application with Flask on AWS Elastic Compute Cloud (EC2) Instance using AWS Cloudformation and CLI Services.

Parameters:
  keyPair:
    Description: Choose your keypair
    Type: AWS::EC2::KeyPair::KeyName
    Default: firstkey

  LatestAmiId:
    Type: "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>"
    Default: "/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2"

Resources:
  myWebServer:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref LatestAmiId

      InstanceType: t2.micro

      KeyName: !Ref keyPair

      SecurityGroupIds:
        - !Ref beekSec # second way: !GetAtt beekSec.GroupId

      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}

      UserData: !Base64 |
        #! /bin/bash
        dnf update -y
        dnf install python3 -y
        dnf install python3-pip -y
        pip3 install flask
        cd /home/ec2-user
        wget https://raw.githubusercontent.com/AhmetBasari/Roman-Numerals-Converter-Application-Python-Flask/main/roman-numerals-converter-app.py
        mkdir templates && cd /home/ec2-user/templates
        wget https://raw.githubusercontent.com/AhmetBasari/Roman-Numerals-Converter-Application-Python-Flask/main/templates/index.html
        wget https://raw.githubusercontent.com/AhmetBasari/Roman-Numerals-Converter-Application-Python-Flask/main/templates/result.html
        cd ..
        python3 roman-numerals-converter-app.py

  beekSec:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: accessible via web browser and terminal from anywhere # Required
      GroupName: cloudformation-project-http-ssh

      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

Outputs:
  webSiteURL:
    Description: URL of website
    Value: !Sub
      - http://${PublicDNS}
      - PublicDNS: !GetAtt myWebServer.PublicDnsName
